force-app/main/default/objects/Contact/fields/annualIncome__c.field-meta.xml
<CustomField>
    <fullName>annualIncome__c</fullName>
    <label>年収</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>