force-app/main/default/objects/Contact/fields/empour__c.field-meta.xml
<CustomField>
    <fullName>empour__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>正社員責任者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>協力社員一覧</relationshipLabel>
    <relationshipName>empours</relationshipName>
    <type>Lookup</type>
</CustomField>