force-app/main/default/objects/Contact/fields/merry__c.field-meta.xml
<CustomField>
    <fullName>merry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>結婚</label>
    <type>Checkbox</type>
</CustomField>