force-app/main/default/objects/Contact/recordTypes/commonEmp.recordType-meta.xml
<RecordType>
    <fullName>commonEmp</fullName>
    <active>true</active>
    <label>一般社員</label>
</RecordType>