force-app/main/default/objects/Contact/recordTypes/partneremp.recordType-meta.xml
<RecordType>
    <fullName>partneremp</fullName>
    <active>true</active>
    <label>協力社員</label>
</RecordType>